turtleart.lessons.turtleart.Main.DiskTwo.scala.error
Source:3: error: '<-' expected but ')' found.
	for (i -> 1 to 18) {
                         ^Source:16: error: illegal start of simple expression
}
^